python.txt
arjun123@LAPTOP-5515TB74:~$ python3
Python 3.8.10 (default, Jun  2 2021, 10:49:15)
[GCC 9.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> 'hello'
'hello'
>>> 52+56
108
>>> 89-36
53
>>> 45//5
9
>>> name ='sambi'
>>> job ='software'
>>> print('my name is ' + name + ' working as ' + job)
my name is sambi working as software
>>> n=20
>>> if(no <10):
...     print(no, 'is a single digit number')
... else:
...     print(no, 'is a multidigit number')
...
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'no' is not defined
>>> n=20
>>> if(n <10):
...     print(n, 'is a multidigit number')
... else:
...     print(n, 'is a single digit number')
...
20 is a single digit number
>>> no=234
>>> if(no <10):
...     print(no, 'is a one digit number')
... elif(no <100):
...     print(no, 'is a two digit number')
... elif(no <200):
...     print(no, 'is a three digit number')
... elif(no <1000):
...     print(no, 'is a three digit number')
... elif(no <10000):
...     print(no, 'is a four digit number')
...
234 is a three digit number
>>> names =['nivi', 'kivi', 'mivi', 'rivi']
>>> names[3]
'rivi'
>>> print(names[5])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range
>>> print(names[2])
mivi
>>> for name in names:
...     print(name)
...
nivi
kivi
mivi
rivi
>>> a,b=0,1
>>> n=10
>>> while(a<n):
...     print(a, end=' ')
...     a,b=b,a+b
...
0 1 1 2 3 5 8 >>> class student:
...     def setstudent(self,id,name,course);
  File "<stdin>", line 2
    def setstudent(self,id,name,course);
                                       ^
SyntaxError: invalid syntax
>>> class student:
...     def setstudent(self,id,name,course):
...             self.id=id
...             self.name=name
...             self.course=course
...     def getstudent(self):
...             print(self.id, " ", self.name, " ", self.course)
...
>>> std = student()
>>> std.setstudent(01,"chelsy","devops")
  File "<stdin>", line 1
    std.setstudent(01,"chelsy","devops")
                    ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
>>> std.setstudent(345,"chelsy","devops")
>>> std.getstudent()
345   chelsy   devops
>>> class item:
...     def__init__(self,name,price):
  File "<stdin>", line 2
    def__init__(self,name,price):
                                ^
SyntaxError: invalid syntax
>>> class item:
...     def __init__(self,name,price):
...             self.name=name
...             self.price=price
...     def showitem(self):
...             print(self.name, " ", self.price)
...
>>> itm=item()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: __init__() missing 2 required positional arguments: 'name' and 'price'
>>> itm= item("dairymilk", 500)
>>> itm.showitem()
dairymilk   500
>>> exit
Use exit() or Ctrl-D (i.e. EOF) to exit
>>>
arjun123@LAPTOP-5515TB74:~$ top
top - 18:47:57 up  2:29,  0 users,  load average: 0.52, 0.58, 0.59
Tasks:   8 total,   1 running,   7 sleeping,   0 stopped,   0 zombie
%Cpu(s):  3.6 us,  8.0 sy,  0.0 ni, 87.1 id,  0.0 wa,  1.2 hi,  0.0 si,  0.0 st
MiB Mem :   3900.0 total,    557.0 free,   3119.0 used,    224.0 buff/cache
MiB Swap:  11776.0 total,   9234.8 free,   2541.2 used.    650.4 avail Mem

  PID USER      PR  NI    VIRT    RES    SHR S  %CPU  %MEM     TIME+ COMMAND
    1 root      20   0    8944    128     84 S   0.0   0.0   0:00.14 init
    8 root      20   0    8944    128     84 S   0.0   0.0   0:00.01 init
    9 sambi   20   0   18076   3640   3540 S   0.0   0.1   0:00.49 bash
  169 root      20   0   18416   2468   2444 S   0.0   0.1   0:00.04 su
  170 bro       20   0   18092   3604   3496 S   0.0   0.1   0:00.12 bash
  230 root      20   0   18416   2468   2440 S   0.0   0.1   0:00.06 su
  231 sambi   20   0   18092   3612   3512 S   0.0   0.1   0:00.23 bash
  299 sambi   20   0   18920   2144   1528 R   0.0   0.1   0:00.00 top











arjun123@LAPTOP-5515TB74:~$ last

wtmp begins Tue Dec 28 20:51:57 2021
arjun123@LAPTOP-5515TB74:~$ ps
  PID TTY          TIME CMD
    9 tty1     00:00:00 bash
  231 tty1     00:00:00 bash
  301 tty1     00:00:00 ps
arjun123@LAPTOP-5515TB74:~$ info
arjun123@LAPTOP-5515TB74:~$ env
SHELL=/bin/bash
PWD=/home/arjun123
LOGNAME=arjun123
HOME=/home/arjun123
LANG=C.UTF-8
LS_COLORS=rs=0:di=01;34:ln=01;36:mh=00:pi=40;33:so=01;35:do=01;35:bd=40;33;01:cd=40;33;01:or=40;31;01:mi=00:su=37;41:sg=30;43:ca=30;41:tw=30;42:ow=34;42:st=37;44:ex=01;32:*.tar=01;31:*.tgz=01;31:*.arc=01;31:*.arj=01;31:*.taz=01;31:*.lha=01;31:*.lz4=01;31:*.lzh=01;31:*.lzma=01;31:*.tlz=01;31:*.txz=01;31:*.tzo=01;31:*.t7z=01;31:*.zip=01;31:*.z=01;31:*.dz=01;31:*.gz=01;31:*.lrz=01;31:*.lz=01;31:*.lzo=01;31:*.xz=01;31:*.zst=01;31:*.tzst=01;31:*.bz2=01;31:*.bz=01;31:*.tbz=01;31:*.tbz2=01;31:*.tz=01;31:*.deb=01;31:*.rpm=01;31:*.jar=01;31:*.war=01;31:*.ear=01;31:*.sar=01;31:*.rar=01;31:*.alz=01;31:*.ace=01;31:*.zoo=01;31:*.cpio=01;31:*.7z=01;31:*.rz=01;31:*.cab=01;31:*.wim=01;31:*.swm=01;31:*.dwm=01;31:*.esd=01;31:*.jpg=01;35:*.jpeg=01;35:*.mjpg=01;35:*.mjpeg=01;35:*.gif=01;35:*.bmp=01;35:*.pbm=01;35:*.pgm=01;35:*.ppm=01;35:*.tga=01;35:*.xbm=01;35:*.xpm=01;35:*.tif=01;35:*.tiff=01;35:*.png=01;35:*.svg=01;35:*.svgz=01;35:*.mng=01;35:*.pcx=01;35:*.mov=01;35:*.mpg=01;35:*.mpeg=01;35:*.m2v=01;35:*.mkv=01;35:*.webm=01;35:*.ogm=01;35:*.mp4=01;35:*.m4v=01;35:*.mp4v=01;35:*.vob=01;35:*.qt=01;35:*.nuv=01;35:*.wmv=01;35:*.asf=01;35:*.rm=01;35:*.rmvb=01;35:*.flc=01;35:*.avi=01;35:*.fli=01;35:*.flv=01;35:*.gl=01;35:*.dl=01;35:*.xcf=01;35:*.xwd=01;35:*.yuv=01;35:*.cgm=01;35:*.emf=01;35:*.ogv=01;35:*.ogx=01;35:*.aac=00;36:*.au=00;36:*.flac=00;36:*.m4a=00;36:*.mid=00;36:*.midi=00;36:*.mka=00;36:*.mp3=00;36:*.mpc=00;36:*.ogg=00;36:*.ra=00;36:*.wav=00;36:*.oga=00;36:*.opus=00;36:*.spx=00;36:*.xspf=00;36:
LESSCLOSE=/usr/bin/lesspipe %s %s
TERM=xterm-256color
LESSOPEN=| /usr/bin/lesspipe %s
USER=arjun123
SHLVL=1
XDG_DATA_DIRS=/usr/local/share:/usr/share:/var/lib/snapd/LAPTOP
PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
MAIL=/var/mail/arjun123
_=/usr/bin/env
OLDPWD=/home/arjun123/outlook
arjun123@LAPTOP-5515TB74:~$ df
Filesystem     1K-blocks     Used Available Use% Mounted on
rootfs         212744520 59454948 153289572  28% /
none           212744520 59454948 153289572  28% /dev
none           212744520 59454948 153289572  28% /run
none           212744520 59454948 153289572  28% /run/lock
none           212744520 59454948 153289572  28% /run/shm
none           212744520 59454948 153289572  28% /run/user
tmpfs          212744520 59454948 153289572  28% /sys/fs/cgroup
C:\            212744520 59454948 153289572  28% /mnt/c
D:\            286718972   104620 286614352   1% /mnt/d
arjun123@LAPTOP-5515TB74:~$
